logoParser.py
# Generated from logo.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class logoParser ( Parser ):

    grammarFileName = "logo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "','", "<INVALID>", 
                     "':'" ]

    symbolicNames = [ "<INVALID>", "RANDOM", "FORWARD", "BACKWARD", "RIGHT", 
                      "LEFT", "PENUP", "PENDOWN", "CLEAR_SCREEN", "WIPE_CLEAN", 
                      "SET_XY", "TO", "END", "IDENTIFIER", "SCIENTIFIC_NUMBER", 
                      "COMMA", "WS", "COLON" ]

    RULE_file_ = 0
    RULE_program = 1
    RULE_invoke_function = 2
    RULE_function_declaration = 3
    RULE_function_args_declaration = 4
    RULE_function_arg = 5
    RULE_function_body = 6
    RULE_function_body_statement = 7
    RULE_function_declare_invoke = 8
    RULE_command_declare_invoke = 9
    RULE_invoke_command = 10
    RULE_command = 11
    RULE_forward = 12
    RULE_backward = 13
    RULE_left = 14
    RULE_right = 15
    RULE_penup = 16
    RULE_pendown = 17
    RULE_setxy = 18
    RULE_random = 19
    RULE_wipe_clean = 20
    RULE_clear_screen = 21

    ruleNames =  [ "file_", "program", "invoke_function", "function_declaration", 
                   "function_args_declaration", "function_arg", "function_body", 
                   "function_body_statement", "function_declare_invoke", 
                   "command_declare_invoke", "invoke_command", "command", 
                   "forward", "backward", "left", "right", "penup", "pendown", 
                   "setxy", "random", "wipe_clean", "clear_screen" ]

    EOF = Token.EOF
    RANDOM=1
    FORWARD=2
    BACKWARD=3
    RIGHT=4
    LEFT=5
    PENUP=6
    PENDOWN=7
    CLEAR_SCREEN=8
    WIPE_CLEAN=9
    SET_XY=10
    TO=11
    END=12
    IDENTIFIER=13
    SCIENTIFIC_NUMBER=14
    COMMA=15
    WS=16
    COLON=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class File_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program(self):
            return self.getTypedRuleContext(logoParser.ProgramContext,0)


        def EOF(self):
            return self.getToken(logoParser.EOF, 0)

        def getRuleIndex(self):
            return logoParser.RULE_file_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_" ):
                listener.enterFile_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_" ):
                listener.exitFile_(self)




    def file_(self):

        localctx = logoParser.File_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.program()
            self.state = 45
            self.match(logoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def invoke_command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logoParser.Invoke_commandContext)
            else:
                return self.getTypedRuleContext(logoParser.Invoke_commandContext,i)


        def function_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logoParser.Function_declarationContext)
            else:
                return self.getTypedRuleContext(logoParser.Function_declarationContext,i)


        def invoke_function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logoParser.Invoke_functionContext)
            else:
                return self.getTypedRuleContext(logoParser.Invoke_functionContext,i)


        def getRuleIndex(self):
            return logoParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = logoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 50
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]:
                    self.state = 47
                    self.invoke_command()
                    pass
                elif token in [11]:
                    self.state = 48
                    self.function_declaration()
                    pass
                elif token in [13]:
                    self.state = 49
                    self.invoke_function()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 52 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 12286) != 0):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Invoke_functionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(logoParser.IDENTIFIER, 0)

        def SCIENTIFIC_NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(logoParser.SCIENTIFIC_NUMBER)
            else:
                return self.getToken(logoParser.SCIENTIFIC_NUMBER, i)

        def getRuleIndex(self):
            return logoParser.RULE_invoke_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInvoke_function" ):
                listener.enterInvoke_function(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInvoke_function" ):
                listener.exitInvoke_function(self)




    def invoke_function(self):

        localctx = logoParser.Invoke_functionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_invoke_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(logoParser.IDENTIFIER)

            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 55
                self.match(logoParser.SCIENTIFIC_NUMBER)
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TO(self):
            return self.getToken(logoParser.TO, 0)

        def IDENTIFIER(self):
            return self.getToken(logoParser.IDENTIFIER, 0)

        def function_args_declaration(self):
            return self.getTypedRuleContext(logoParser.Function_args_declarationContext,0)


        def function_body(self):
            return self.getTypedRuleContext(logoParser.Function_bodyContext,0)


        def END(self):
            return self.getToken(logoParser.END, 0)

        def getRuleIndex(self):
            return logoParser.RULE_function_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_declaration" ):
                listener.enterFunction_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_declaration" ):
                listener.exitFunction_declaration(self)




    def function_declaration(self):

        localctx = logoParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(logoParser.TO)
            self.state = 62
            self.match(logoParser.IDENTIFIER)
            self.state = 63
            self.function_args_declaration()
            self.state = 64
            self.function_body()
            self.state = 65
            self.match(logoParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_args_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logoParser.Function_argContext)
            else:
                return self.getTypedRuleContext(logoParser.Function_argContext,i)


        def getRuleIndex(self):
            return logoParser.RULE_function_args_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_args_declaration" ):
                listener.enterFunction_args_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_args_declaration" ):
                listener.exitFunction_args_declaration(self)




    def function_args_declaration(self):

        localctx = logoParser.Function_args_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function_args_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14 or _la==17:
                self.state = 67
                self.function_arg()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_argContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(logoParser.COLON, 0)

        def IDENTIFIER(self):
            return self.getToken(logoParser.IDENTIFIER, 0)

        def SCIENTIFIC_NUMBER(self):
            return self.getToken(logoParser.SCIENTIFIC_NUMBER, 0)

        def getRuleIndex(self):
            return logoParser.RULE_function_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_arg" ):
                listener.enterFunction_arg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_arg" ):
                listener.exitFunction_arg(self)




    def function_arg(self):

        localctx = logoParser.Function_argContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function_arg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.state = 73
                self.match(logoParser.COLON)
                self.state = 74
                self.match(logoParser.IDENTIFIER)
                pass
            elif token in [14]:
                self.state = 75
                self.match(logoParser.SCIENTIFIC_NUMBER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_body_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logoParser.Function_body_statementContext)
            else:
                return self.getTypedRuleContext(logoParser.Function_body_statementContext,i)


        def getRuleIndex(self):
            return logoParser.RULE_function_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_body" ):
                listener.enterFunction_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_body" ):
                listener.exitFunction_body(self)




    def function_body(self):

        localctx = logoParser.Function_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_function_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 10238) != 0:
                self.state = 78
                self.function_body_statement()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_body_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command_declare_invoke(self):
            return self.getTypedRuleContext(logoParser.Command_declare_invokeContext,0)


        def function_declare_invoke(self):
            return self.getTypedRuleContext(logoParser.Function_declare_invokeContext,0)


        def getRuleIndex(self):
            return logoParser.RULE_function_body_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_body_statement" ):
                listener.enterFunction_body_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_body_statement" ):
                listener.exitFunction_body_statement(self)




    def function_body_statement(self):

        localctx = logoParser.Function_body_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_function_body_statement)
        try:
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.command_declare_invoke()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.function_declare_invoke()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declare_invokeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(logoParser.IDENTIFIER, 0)

        def function_arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logoParser.Function_argContext)
            else:
                return self.getTypedRuleContext(logoParser.Function_argContext,i)


        def getRuleIndex(self):
            return logoParser.RULE_function_declare_invoke

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_declare_invoke" ):
                listener.enterFunction_declare_invoke(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_declare_invoke" ):
                listener.exitFunction_declare_invoke(self)




    def function_declare_invoke(self):

        localctx = logoParser.Function_declare_invokeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_function_declare_invoke)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(logoParser.IDENTIFIER)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14 or _la==17:
                self.state = 89
                self.function_arg()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Command_declare_invokeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(logoParser.CommandContext,0)


        def getRuleIndex(self):
            return logoParser.RULE_command_declare_invoke

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand_declare_invoke" ):
                listener.enterCommand_declare_invoke(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand_declare_invoke" ):
                listener.exitCommand_declare_invoke(self)




    def command_declare_invoke(self):

        localctx = logoParser.Command_declare_invokeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_command_declare_invoke)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.command()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Invoke_commandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(logoParser.CommandContext,0)


        def getRuleIndex(self):
            return logoParser.RULE_invoke_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInvoke_command" ):
                listener.enterInvoke_command(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInvoke_command" ):
                listener.exitInvoke_command(self)




    def invoke_command(self):

        localctx = logoParser.Invoke_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_invoke_command)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.command()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def forward(self):
            return self.getTypedRuleContext(logoParser.ForwardContext,0)


        def backward(self):
            return self.getTypedRuleContext(logoParser.BackwardContext,0)


        def left(self):
            return self.getTypedRuleContext(logoParser.LeftContext,0)


        def right(self):
            return self.getTypedRuleContext(logoParser.RightContext,0)


        def penup(self):
            return self.getTypedRuleContext(logoParser.PenupContext,0)


        def pendown(self):
            return self.getTypedRuleContext(logoParser.PendownContext,0)


        def random(self):
            return self.getTypedRuleContext(logoParser.RandomContext,0)


        def setxy(self):
            return self.getTypedRuleContext(logoParser.SetxyContext,0)


        def wipe_clean(self):
            return self.getTypedRuleContext(logoParser.Wipe_cleanContext,0)


        def clear_screen(self):
            return self.getTypedRuleContext(logoParser.Clear_screenContext,0)


        def getRuleIndex(self):
            return logoParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = logoParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_command)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.state = 99
                self.forward()
                pass
            elif token in [3]:
                self.state = 100
                self.backward()
                pass
            elif token in [5]:
                self.state = 101
                self.left()
                pass
            elif token in [4]:
                self.state = 102
                self.right()
                pass
            elif token in [6]:
                self.state = 103
                self.penup()
                pass
            elif token in [7]:
                self.state = 104
                self.pendown()
                pass
            elif token in [1]:
                self.state = 105
                self.random()
                pass
            elif token in [10]:
                self.state = 106
                self.setxy()
                pass
            elif token in [9]:
                self.state = 107
                self.wipe_clean()
                pass
            elif token in [8]:
                self.state = 108
                self.clear_screen()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForwardContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FORWARD(self):
            return self.getToken(logoParser.FORWARD, 0)

        def function_arg(self):
            return self.getTypedRuleContext(logoParser.Function_argContext,0)


        def getRuleIndex(self):
            return logoParser.RULE_forward

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForward" ):
                listener.enterForward(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForward" ):
                listener.exitForward(self)




    def forward(self):

        localctx = logoParser.ForwardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_forward)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(logoParser.FORWARD)
            self.state = 112
            self.function_arg()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BackwardContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BACKWARD(self):
            return self.getToken(logoParser.BACKWARD, 0)

        def function_arg(self):
            return self.getTypedRuleContext(logoParser.Function_argContext,0)


        def getRuleIndex(self):
            return logoParser.RULE_backward

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBackward" ):
                listener.enterBackward(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBackward" ):
                listener.exitBackward(self)




    def backward(self):

        localctx = logoParser.BackwardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_backward)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(logoParser.BACKWARD)
            self.state = 115
            self.function_arg()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LeftContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT(self):
            return self.getToken(logoParser.LEFT, 0)

        def function_arg(self):
            return self.getTypedRuleContext(logoParser.Function_argContext,0)


        def getRuleIndex(self):
            return logoParser.RULE_left

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeft" ):
                listener.enterLeft(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLeft" ):
                listener.exitLeft(self)




    def left(self):

        localctx = logoParser.LeftContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_left)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(logoParser.LEFT)
            self.state = 118
            self.function_arg()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RightContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RIGHT(self):
            return self.getToken(logoParser.RIGHT, 0)

        def function_arg(self):
            return self.getTypedRuleContext(logoParser.Function_argContext,0)


        def getRuleIndex(self):
            return logoParser.RULE_right

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRight" ):
                listener.enterRight(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRight" ):
                listener.exitRight(self)




    def right(self):

        localctx = logoParser.RightContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_right)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(logoParser.RIGHT)
            self.state = 121
            self.function_arg()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PenupContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PENUP(self):
            return self.getToken(logoParser.PENUP, 0)

        def getRuleIndex(self):
            return logoParser.RULE_penup

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPenup" ):
                listener.enterPenup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPenup" ):
                listener.exitPenup(self)




    def penup(self):

        localctx = logoParser.PenupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_penup)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(logoParser.PENUP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PendownContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PENDOWN(self):
            return self.getToken(logoParser.PENDOWN, 0)

        def getRuleIndex(self):
            return logoParser.RULE_pendown

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPendown" ):
                listener.enterPendown(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPendown" ):
                listener.exitPendown(self)




    def pendown(self):

        localctx = logoParser.PendownContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_pendown)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(logoParser.PENDOWN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetxyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SET_XY(self):
            return self.getToken(logoParser.SET_XY, 0)

        def function_arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logoParser.Function_argContext)
            else:
                return self.getTypedRuleContext(logoParser.Function_argContext,i)


        def getRuleIndex(self):
            return logoParser.RULE_setxy
